force-app/main/default/objects/ChangeLogRuntime__c/ChangeLogRuntime__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Change Log Runtime</label>
</CustomObject>