force-app/main/default/objects/ChangeLogRuntime__c/fields/Approval_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Approval_User_Ids__c</fullName>
    <description>Comma-separated Salesforce User IDs selected to approve deployment windows.</description>
    <label>Approval User IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>