force-app/main/default/objects/ChangeLogRuntime__c/fields/Compliance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rate__c</fullName>
    <label>Compliance Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>