force-app/main/default/objects/ChangeLogRuntime__c/fields/Create_Case_For_Non_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Create_Case_For_Non_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to automatically create a Case for non-compliant records. The Case will be assigned to the user who updated the setup object, who must provide a justification to resolve the issue.</description>
    <label>Create Case For Non-Compliant?</label>
    <type>Checkbox</type>
</CustomField>