force-app/main/default/objects/ChangeLogRuntime__c/fields/Deployment_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_User_Id__c</fullName>
    <description>This field will capture the org&apos;s deployment user id if present.</description>
    <label>Deployment User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>