force-app/main/default/objects/ChangeLogRuntime__c/fields/Enable_Deployment_Window_Approval__c.field-meta.xml
<CustomField>
    <fullName>Enable_Deployment_Window_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to require approval before a Change Window record can be activated. When disabled, the record creator can activate Change Window records manually without approval.</description>
    <inlineHelpText>Enable this setting to require approval before a Change Window record can be activated. When disabled, the record creator can activate Change Window records manually without approval.</inlineHelpText>
    <label>Enable Deployment Window Approval</label>
    <type>Checkbox</type>
</CustomField>