force-app/main/default/objects/ChangeLogRuntime__c/fields/Initial_Run_Window__c.field-meta.xml
<CustomField>
    <fullName>Initial_Run_Window__c</fullName>
    <description>This field is used to represent number of days to go back for the first run or when the last run timestamp is empty</description>
    <inlineHelpText>Number of days to go back for the first run.</inlineHelpText>
    <label>Initial Run Window</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>