force-app/main/default/objects/ChangeLogRuntime__c/fields/Last_Saved_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved_Stage__c</fullName>
    <label>Last Saved Wizard Stage</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>