force-app/main/default/objects/ChangeLogRuntime__c/fields/Org_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Org_Health_Score__c</fullName>
    <label>Org Health Score</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>