force-app/main/default/objects/ChangeLogRuntime__c/fields/Score_Band__c.field-meta.xml
<CustomField>
    <fullName>Score_Band__c</fullName>
    <label>Score Band</label>
    <length>20</length>
    <type>Text</type>
</CustomField>