force-app/main/default/objects/ChangeLogRuntime__c/fields/Score_Breakdown_JSON__c.field-meta.xml
<CustomField>
    <fullName>Score_Breakdown_JSON__c</fullName>
    <label>Score Breakdown JSON</label>
    <type>TextArea</type>
</CustomField>