force-app/main/default/objects/ChangeLogRuntime__c/fields/Score_Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>Score_Calculated_At__c</fullName>
    <label>Score Calculated At</label>
    <type>DateTime</type>
</CustomField>