force-app/main/default/objects/ChangeLogRuntime__c/fields/Slack_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Name__c</fullName>
    <label>Slack Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>