force-app/main/default/objects/ChangeLogRuntime__c/fields/Slack_Last_Test__c.field-meta.xml
<CustomField>
    <fullName>Slack_Last_Test__c</fullName>
    <label>Slack Last Successful Test</label>
    <type>DateTime</type>
</CustomField>