force-app/main/default/objects/ChangeLogRuntime__c/fields/Slack_Notifications_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notifications_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>