force-app/main/default/objects/ChangeLogRuntime__c/fields/Slack_Private_Channels__c.field-meta.xml
<CustomField>
    <fullName>Slack_Private_Channels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Private Channels</label>
    <type>Checkbox</type>
</CustomField>