force-app/main/default/objects/ChangeLogRuntime__c/fields/Slack_Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Workspace_Id__c</fullName>
    <label>Slack Workspace ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>