force-app/main/default/objects/ChangeLogRuntime__c/fields/Teams_Identity_Id__c.field-meta.xml
<CustomField>
    <fullName>Teams_Identity_Id__c</fullName>
    <description>Microsoft Graph identity ID for the account that authorized Org Monitor.</description>
    <label>Teams Identity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>