force-app/main/default/objects/ChangeLogRuntime__c/fields/Teams_Identity_Name__c.field-meta.xml
<CustomField>
    <fullName>Teams_Identity_Name__c</fullName>
    <description>Display name for the Microsoft account that authorized Org Monitor.</description>
    <label>Teams Identity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>