force-app/main/default/objects/ChangeLogRuntime__c/fields/Teams_Last_Test__c.field-meta.xml
<CustomField>
    <fullName>Teams_Last_Test__c</fullName>
    <label>Teams Last Successful Test</label>
    <type>DateTime</type>
</CustomField>