force-app/main/default/objects/ChangeLogRuntime__c/fields/Teams_Notifications_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Teams_Notifications_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teams Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>