force-app/main/default/objects/ChangeLogRuntime__c/fields/Teams_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Teams_Team_Id__c</fullName>
    <label>Teams Team ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>