force-app/main/default/objects/ChangeLogRuntime__c/fields/Teams_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Teams_Team_Name__c</fullName>
    <label>Teams Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>