force-app/main/default/objects/ChangeLogRuntime__c/fields/Unusual_Hours_End__c.field-meta.xml
<CustomField>
    <fullName>Unusual_Hours_End__c</fullName>
    <defaultValue>&quot;06:00&quot;</defaultValue>
    <description>Organization-local end time for unusual-hours setup change tracking.</description>
    <label>Unusual Hours End</label>
    <length>5</length>
    <type>Text</type>
</CustomField>