force-app/main/default/objects/ChangeLogRuntime__c/fields/Unusual_Hours_Start__c.field-meta.xml
<CustomField>
    <fullName>Unusual_Hours_Start__c</fullName>
    <defaultValue>&quot;22:00&quot;</defaultValue>
    <description>Organization-local start time for unusual-hours setup change tracking.</description>
    <label>Unusual Hours Start</label>
    <length>5</length>
    <type>Text</type>
</CustomField>